# goit-web-hw-13

./: .env-sample  .gitignore  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 14d8cfe3a940_add_timezone_to_user_created_at_field.py  77263c51ecd7_init.py  b7bbd77ba616_init.py  d3e918dfba93_add_user_model_confirmed_field.py  d4ecec2e4a8e_add_user_avatar_field.py
docs/: conf.py  index.rst
src/: config.py  dependency.py  settings.py
src/database/: db.py  models.py  redis.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: auth.py  contacts.py  filters.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
src/utils/: auth.py  common.py
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
